--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,7 @@
 a {text-decoration: none !important;}
 .login-page{
     height: 100vh;
-    background-image: url();
+    background-image: url(images/login-bg.webp);
     background-size: cover;
     position: relative;
 }
