--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,7 @@
 a {text-decoration: none !important;}
 .login-page{
     height: 100vh;
-    background-image: url(images/login-bg.webp);
+    background-image: url(https://preview.colorlib.com/theme/bootstrap/login-form-20/images/xbg.jpg.pagespeed.ic.tiVxeakBSd.webp);
     background-size: cover;
     position: relative;
 }
